[package]
name = "hmm"
description = "A personal CLI notebook for commands — like man, but for your own notes."
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
inquire = "0.7.5"
log = "0.4.27"
thiserror = "2.0.12"
